@@ -6,6 +6,9 @@ Release Notes
 Jar change:
     o lucene-core has been upgraded from lucene-core-2.0.0 to lucene-2.2.0.jar.
 
+Typed literals:
+    o Fixed bug in equality checking of instances of xsd:decimal.
+    
 ==== Jena 2.5.4
 
 Graph
